force-app/main/default/objects/cgcloud__Order__c/cgcloud__Order__c.object-meta.xml
<CustomObject>
    <description>Holds the header details of the order entry.</description>
    <label>Advanced Order</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>