force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Actual_Check_Out_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Actual_Check_Out_Quantity__c</fullName>
    <description>Total product check out quantiy for the tour in question as actually counted by the tour executing user.</description>
    <label>Actual Check Out Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>