force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__ASN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ASN__c</fullName>
    <description>The advanced shipping notice number provided by the supplier for a special delivery.</description>
    <label>ASN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>