force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__ATM_Confirmation_Nr__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ATM_Confirmation_Nr__c</fullName>
    <description>Contains the confirmation number of the receipt, printed by ATM.</description>
    <label>ATM Confirmation Nr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>