force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bank_Name__c</fullName>
    <description>Contains the name of the bank.</description>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SantanderBank</fullName>
            </value>
            <value>
                <fullName>CitiBank</fullName>
            </value>
            <value>
                <fullName>Bank_of_Scotland</fullName>
            </value>
            <value>
                <fullName>IngDiBa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>