force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Bill_Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bill_Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the bill to of the order entry</description>
    <label>Bill Recipient Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bill Recipient Account)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>