force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Calculation_Schema__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Schema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The schema used to calculate the order with complex
			pricing.</description>
    <label>Calculation Schema</label>
    <referenceTo>cgcloud__CP_Calculation_Schema__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>