force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Status__c</fullName>
    <description>The complex pricing calculation status.</description>
    <label>Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>