force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Calculation_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Time__c</fullName>
    <description>Time of the last complex pricing calculation for this order.</description>
    <label>Calculation Time</label>
    <type>DateTime</type>
</CustomField>