force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Check_Out_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Out_Quantity__c</fullName>
    <description>Total product check out quantity for the tour in question as given by the HOST interface.</description>
    <label>Check Out Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>