force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Check_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Out_Type__c</fullName>
    <description>Check out type (method) that is to be applied in the product check out document based on the given template settings.</description>
    <label>Check Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Pallets</fullName>
            </value>
            <value>
                <fullName>Counting Groups</fullName>
            </value>
            <value>
                <fullName>SKU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>