force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Customer_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Order_Id__c</fullName>
    <label>Customer Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>