force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Date__c</fullName>
    <description>By default next day.Delivery date calculation is
			customized very often.</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>