force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Delivery_Documents_Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Documents_Condition__c</fullName>
    <formula>IF( AND(cgcloud__Order_Template__r.RecordType.DeveloperName =
			&apos;Order_Entry&apos; ,
			ISPICKVAL(cgcloud__Order_Template__r.cgcloud__Document_Type__c,&apos;Delivery&apos;) ),
			true, false)</formula>
    <label>Delivery Documents Condition</label>
    <type>Checkbox</type>
</CustomField>