force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Note__c</fullName>
    <description>Delivery Note</description>
    <label>Delivery Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>