force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Delivery_Recipient__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Delivery Recipient of the selected account</description>
    <label>Delivery Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Delivery Recipient)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>