force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Terms__c</fullName>
    <description>Terms of delivery.</description>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExWarehouse</fullName>
            </value>
            <value>
                <fullName>FreeOnBoard</fullName>
            </value>
            <value>
                <fullName>FreeOfCharge</fullName>
            </value>
            <value>
                <fullName>ScaleOfCharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>