force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Distribution_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Relevant__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the orders are relevant for distribution</description>
    <label>Distribution Relevant</label>
    <type>Checkbox</type>
</CustomField>