force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Gross_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Gross_Total_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Gross total value (domestic currency) of the sales
			document including relevant sales taxes. Calculated by the system
			based on the respective sales document item template settings.</description>
    <label>Gross Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>