force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Gross_Total_Value_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Gross_Total_Value_Receipt__c</fullName>
    <description>Total value of the order entry in the order/receipt
			currency.</description>
    <label>Gross Total Value(Receipt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>