force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Header_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Header_Discount_Percentage__c</fullName>
    <description>Percentage value of the header discount.</description>
    <label>Header Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>