force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initiation_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date of initiation of this sales document.</description>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>