force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Inventory_Reference_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Reference_2__c</fullName>
    <description>Second reference to the inventory as defined in the order template</description>
    <label>Inventory Reference 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>