force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invoice_ID__c</fullName>
    <description>The unique invoice identifier.</description>
    <label>Invoice ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>