force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Invoice_Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invoice_Note__c</fullName>
    <description>Invoice Note</description>
    <label>Invoice Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>