force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Merchandise_Value_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Merchandise_Value_Receipt__c</fullName>
    <description>Merchandise value (value of goods) in receipt currency
			not including header discount.</description>
    <label>Merchandise Value Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>