force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Mobility_Release__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobility Release</label>
    <type>Checkbox</type>
</CustomField>