force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Order_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to capture customer for which Order is
			created</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Customer)</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>