force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Order_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>The day the customer commited to the sales document. For
			order entries this is the order date.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>