force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Order_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Id__c</fullName>
    <description>Specifies the user readable number used for print-outs
			and customer communication</description>
    <label>Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>