force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Order_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Order Template for Order Entry</description>
    <label>Order Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Order_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>