force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Paid_Amount__c</fullName>
    <description>Paid Amount of Order</description>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>