force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Paid_Amount_Receipt__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Paid_Amount_Receipt__c</fullName>
    <description>Paid amount of the order entry in domestic currency. The
			paid amount is a gross value.</description>
    <label>Paid Amount Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>