force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Payer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the payer of the order</description>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Payer)</relationshipLabel>
    <relationshipName>Payers</relationshipName>
    <type>Lookup</type>
</CustomField>