force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment__c</fullName>
    <description>Represents sign of absolute paid amount, that is inpayment (+, debit) or outpayment (-, credit), respectively</description>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>