force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Payment_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Reason__c</fullName>
    <description>Specifies a reason that leads to modifying the document
			handling regarding payments.</description>
    <label>Payment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CalculationFailed</fullName>
            </value>
            <value>
                <fullName>PriceDisagreement</fullName>
            </value>
            <value>
                <fullName>WrongPrice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>