force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Terms__c</fullName>
    <description>Terms of payment.</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2percent</fullName>
            </value>
            <value>
                <fullName>net30</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>