force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phase__c</fullName>
    <description>Workflow neutral description of the order Entry status.</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>SendFax</fullName>
            </value>
            <value>
                <fullName>WorkCompleted</fullName>
            </value>
            <value>
                <fullName>HoldBack</fullName>
            </value>
            <value>
                <fullName>ForApproval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>