force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Date__c</fullName>
    <description>Enables tracking which conditions were used. By default
			current day. Can be changed if the order was taken on paper first and
			was added to the system after a price change</description>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>