force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Pricing_Info_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Info_3__c</fullName>
    <label>Pricing Info 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>