force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Pricing_Information__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Information__c</fullName>
    <description>Holds the pricing information (found conditions) which are directly related to the order.</description>
    <label>Pricing Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>