force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Print_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Print_Status__c</fullName>
    <description>--- Attribute no longer used --- Contains information about the successfully initiated print out process on the mobility device.</description>
    <label>Print Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NotPrinted</fullName>
                <default>true</default>
                <label>NotPrinted</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>NotSuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>