force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Receipt_Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Receipt_Currency__c</fullName>
    <description>Receipt currency of a order.</description>
    <label>Receipt Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>Yen</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>