force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Release_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Release_Geolocation__c</fullName>
    <description>Geolocation (Latitute and Longitude) to be fulfilled by mobility devices and not displayed in the order UI.</description>
    <inlineHelpText>Latitude (-90; 90)
        Longitude (-180; 180)</inlineHelpText>
    <label>Release Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>