force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Release_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Release_Platform__c</fullName>
    <formula>TEXT(cgcloud__Order_Template__r.cgcloud__Release_Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Platform</label>
    <type>Text</type>
</CustomField>