force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Release_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Release_Time__c</fullName>
    <description>Date and time the sales document has been released.</description>
    <label>Release Time</label>
    <type>DateTime</type>
</CustomField>