force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Responsible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the responsible user.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>