force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Selected_Rewards__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Selected_Rewards__c</fullName>
    <description>Holds mobility selected rewards and related items/products in JSON format.</description>
    <label>Selected Rewards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>