force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Total_Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Shipped_Quantity__c</fullName>
    <description>Sum of all shipped quantities</description>
    <label>Total Shipped Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>