force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Total_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total value (domestic currency) of the order including item discounts, without sales taxes.</description>
    <label>Total Value/Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>