force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Tour__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to Tour</description>
    <label>Tour</label>
    <referenceTo>cgcloud__Tour__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>