force-app/main/default/objects/cgcloud__Order__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value of the order entry in the order/receipt currency.</description>
    <label>Value(Receipt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>